# raytracing_engine_with_modelling

./: .gitignore  CG1_RayTracer.sln  CMakeLists.txt  README.md  build_release.sh  install_deps.sh
RayTracer/: CSG.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  boundingbox.h  box.h  box_csg.h  bvh_node.h  camera.cpp  camera.h  color.h  cone.h  csg_intesection.h  cylinder.h  hit_record.h  hittable.h  hittable_group.h  hittable_list.h  hittable_manager.h  interface_imgui.cpp  interface_imgui.h  interval.cpp  interval.h  light.h  main.cpp  material.h  matrix4x4.h  mesh.h  node.h  octree.h  octreemanager.cpp  octreemanager.h  plane.h  primitive.h  raytracer.h  render_state.h  scene.h  scene_builder.cpp  scene_builder.h  sdl_setup.h  sphere.h  (+11 more)
RayTracer/SDL2/: SDL_ttf.h
RayTracer/models/: garanhuns.mtl  sonic.mtl
RayTracer/models/cenario/: loop.mtl  palm.mtl
assets/models/cenario/: loop.mtl
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RaytracerCG1.sln  RaytracerCG1.vcxproj  RaytracerCG1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_vs/Debug/assets/models/cenario/: totem.mtl
qbRaytracing/: RayTracer.cpp  boundingbox.h  box.h  camera.cpp  color.h  cone.h  cylinder.h  hittable.h  hittable_list.h  imgui.ini  interface_imgui.cpp  interface_imgui.h  interval.cpp  interval.h  light.h  main.cpp  material.h  node.h  octree.h  plane.h  raytracer.h  sdl_setup.h  sphere.h  torus.h  vec3.h  wireframe.h
src/: main.cpp
src/core/: boundingbox.h  color.h  interval.h  matrix4x4.h  ray.h  vec3.h
src/geometry/: box.h  cone.h  mesh.h  node.h  plane.h
src/modelling/: csg.h  octree.h
src/platform/: asset_path.h  dialog_box.h  interface_imgui.cpp  interface_imgui.h  sdl_setup.h
src/renderer/: camera.h  raytracer.h  wireframe.h
src/scene/: scene.h  scene_builder.cpp  scene_builder.h
